JWT 사용자 인증 추가

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,10 +14,7 @@
         <div class="inner">
             <div class="nav-container">
                 <h1 class="nav-title">맛도리</h1>
-                <button class="nav-contact">맛집 추가</button>
-
                 <div class="sign-container">
-                    <!-- 회원 -->
                     <div class="signed hidden">
                         <div class="dropdown">
                             <div class="dropdown-button">
@@ -37,8 +34,10 @@
         <!--카테고리-->
         <section id="category">
             <div class="inner">
-                <h2 class="categort-title">맛집검색</h2>
-                가본곳검색
+                <div class="categort-container">
+                    <h2 class="categort-title">맛집검색</h2>
+                    <button class="nav-contact">맛집 추가</button>
+                </div>
                 <div class="categort-list">
                     <button class="categort-item" id="korean">한식</button>
                     <button class="categort-item" id="american">양식</button>
@@ -102,6 +101,7 @@
     <script type="text/javascript"
         src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d05f06623bbe828de8c043fb940d71ec&libraries=services"></script>
     <script src="../JS/axios-script.js"></script>
+    <script src="../JS/header.js"></script>
 </body>
 
 </html>
