--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -17,7 +17,7 @@
     <nav>
         <div class="inner">
             <div class="nav-container">
-                <h1 class="nav-title"><a href="./index.html">맛집지도</a></h1>
+                <h1 class="nav-title"><a href="./index.html">맛도리</a></h1>
                 <button class="nav-contact">
                     <a href="./signup.html">로그인/회원가입</a>
                 </button>
@@ -28,7 +28,7 @@
     <main>
         <div class="inner">
             <div class="signin-container">
-                <h2>맛집지도 로그인</h2>
+                <h2>맛도리 로그인</h2>
                 <div class="signin-form">
                     <input type="text" placeholder="아이디" id="userID" />
                     <input type="password" placeholder="비밀번호" id="password" />
