--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -14,7 +14,7 @@
     <nav>
         <div class="inner">
             <div class="nav-container">
-                <h1 class="nav-title"><a href="./index.html">맛집지도</a></h1>
+                <h1 class="nav-title"><a href="./index.html">맛도리</a></h1>
                 <button class="nav-contact">
                     <a href="./signin.html">로그인/회원가입</a>
                 </button>
@@ -25,7 +25,7 @@
     <main>
         <div class="inner">
             <div class="signin-container">
-                <h2>맛집지도 회원가입</h2>
+                <h2>맛도리 회원가입</h2>
                 <div class="signin-form">
                     <input type="text" placeholder="아이디" id="userID" />
                     <input type="password" placeholder="비밀번호" id="password" />
